<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Bluetooth F3</string>	
	<string name="action_settings">Settings</string>
	<string name="open">打开蓝牙</string>
    <string name="visible">BT可见</string>
    <string name="search">搜索设备</string>
    <string name="clear">清空</string>
    <string name="pairDev">已配对设备列表(单击连接，长按取消连接配对)</string>
     <string name="connectDev">已连接设备：</string>
    <string name="listDev">搜索的设备列表（单击连接设备）</string>
    <string name="send">发送区</string>
    <string name="write">发送</string>
    <string name="receive">接收区</string>
    <string name="connect">JBM-150AudioSpp</string>
    <string name="a2dpconnect">JBM-150AudioA2dp</string>
    
    <string name="ButtonString">Connect</string>
    <string name="InvalidDevice">Invalid Device</string>
    <string name="NullDevice">Null Device</string>
    <string name="Connecting">A2dp Connecting</string>
    <string name="Disconnecting">A2dp Disconnecting</string>
    <string name="BuilderTitle">Bluetooth Device</string>
    <string name="NoBluetooth">Device does not have Bluetooth enabled</string>
    <string name="NeedEnable">Bluetooth must be enabled before you can place a widget</string>
    <string name="BTNotEnabled">Bluetooth not enabled</string>
    <string name="InterfaceError">Interface error</string>
	
</resources>