<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BluetoothHandset" >

    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >    
    	   	
	    <ToggleButton
	        android:id="@+id/bt_onoff"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/open" />
	
	    <Button
	        android:id="@+id/bt_visible"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/visible" />
	    
    	<Button
	        android:id="@+id/bt_search"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/search" />
    	<Button
	        android:id="@+id/bt_clear"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/clear" />
	    
    </LinearLayout>
    
    
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >    
    	   	
	    <EditText
	        android:id="@+id/bt_receive"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="top"
	        android:hint="@string/receive"
	        android:minHeight="100dp"
	        android:maxHeight="240dp"
	        android:background="@drawable/bg_edittext"/>
	    
    </LinearLayout>

     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" 
         android:visibility="visible">

         <EditText
             android:id="@+id/et_writezone"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_weight="0.87"
             android:background="@drawable/bg_edittext"
             android:gravity="top"
             android:hint="@string/send" />

         <Button
             android:id="@+id/bt_write"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/write" />
     </LinearLayout>
    
    <TextView android:id="@+id/title_connect"
        	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/connectDev" />
    
    <TextView android:id="@+id/title_pair"
        	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/pairDev" />

    <ListView
	        android:id="@+id/bt_pair_dev"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
    
    <TextView android:id="@+id/title_list"
        	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/listDev" />
    <ListView
	        android:id="@+id/bt_dev_list"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
    
    
    

</LinearLayout>